src/test/deca/syntax/parser/valid/test/test_pars_val_instruction_literal_int.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour un literal.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    123654;
}