src/test/deca/syntax/parser/invalid/pars_inv_printx_oubli_fin.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le printx
//
// Resultats:
//    Ligne 12 : Erreur (oubli ;)
//    
//
// Historique:
//    cree le 04/01/2023

{
    printx('Hello')
}
